# sst-elements

./: .gitignore
scripts/: build-only-carcosa-memh-vanadis.sh
src/sst/elements/carcosa/: .gitignore  Makefile.am  PMDataRegistry.h  README.md  hyades.h
src/sst/elements/carcosa/Components/: ActionScorer.cc  ActionScorer.h  COMPONENT_SUMMARY.md  CarcosaCPU.cc  CarcosaCPU.h  CarcosaMemCtrl.cc  CarcosaMemCtrl.h  CpuEvent.h  CriticalActionWatcher.cc  CriticalActionWatcher.h  EccGuard.cc  EccGuard.h  EccPolicy.h  EccScheme.h  FaultInjCPU.cc  FaultInjCPU.h  FaultInjEvent.h  FaultInjManager.cc  FaultInjManager.h  FaultInjManagerAPI.h  FourStateAgent.cc  FourStateAgent.h  Hali.cc  Hali.h  HaliEvent.h  InterceptionAgentAPI.h  PingPongAgent.cc  PipelineStateRegistry.h  SensorComponent.cc  SensorComponent.h  SensorEvent.h  VLAAgent.cc  VLAAgent.h  VlaRegions.h  vla-fsm.cc  vla-fsm.h
src/sst/elements/carcosa/VLA-Example/: README_ECC_METHODOLOGY.md
src/sst/elements/carcosa/VLA-Example/Components/: VLAAgent.cc  VLAAgent.h  VLACpuAgent.cc  VLACpuAgent.h  VLACpuDelayAgent.cc  VLACpuDelayAgent.h  VLAGpuAgent.cc  VLAGpuAgent.h  VLAGpuDelayAgent.cc  VLAGpuDelayAgent.h  VLAKernelComplexity.h  vla-fsm.cc  vla-fsm.h
src/sst/elements/carcosa/VLA-Example/case_studies/: index.csv  manifest.yaml
src/sst/elements/carcosa/VLA-Example/case_studies/analysis/: case_study_table.csv  per_run_summary.csv  preflight_report.txt  pressure_points.csv  summary.txt
src/sst/elements/carcosa/VLA-Example/case_studies/goldens/: golden_secded_kernel_aware.csv
src/sst/elements/carcosa/VLA-Example/scripts/: analyze_ecc_results.py  ecc_shard_merge_lib.py  extract_baselines.py  load_case_manifest.py  make_figures.py  merge_campaign_shards.py  merge_sweep_shards.py  monitor_ecc_pipeline.sh  pilot_case_goldilocks.sh  preflight_case_studies.sh  propagation_analyzer.py  run_all_ecc.sh  run_case_studies.sh  run_ecc_campaign.sh  run_ecc_phase1_spotcheck.sh  run_ecc_sweep.sh  run_phase2_from_phase1.sh  shard_run_ecc_campaign.sh  shard_run_ecc_sweep.sh
src/sst/elements/carcosa/VLA-Example/tests/: Makefile  stub_cpu.c  stub_cpu.glibc  stub_gpu.c  stub_gpu.glibc  testCarcosaVLA.py  testCarcosaVLA_CaseStudy.py  testCarcosaVLA_GPUCPU.py  testCarcosaVLA_GPUCPU_Synth.py  testCarcosaVLA_earlyexit.py  vla  vla.c  vla.glibc  vla_cpu.c  vla_cpu.glibc  vla_gpu  vla_gpu.c  vla_gpu.glibc  vla_shared.h
src/sst/elements/carcosa/components/: carcosaMemCtrl.h  fourStateAgent.cc  fourStateAgent.h  pipelineStateRegistry.h
src/sst/elements/carcosa/examples/SimplePipeline/: SimplePipelineExample.cc  SimplePipelineExample.h
src/sst/elements/carcosa/examples/SimplePipeline/tests/: testPortModuleMitigatedGate.py  testPortModuleStateGate.py  testSimplePipeline.py
src/sst/elements/carcosa/examples/simplePipeline/: simplePipelineExample.cc  simplePipelineExample.h
src/sst/elements/carcosa/injectors/: faultInjectorMemH.cc  faultInjectorMemH.h  portModuleMitigatedGate.cc  portModuleMitigatedGate.h  portModuleStateGate.cc  portModuleStateGate.h
src/sst/elements/carcosa/tests/: .gitignore  fourstate.c  pingpong  pingpong.c  run_carcosa_tests.sh  testCarcosaPingPong.py  testCarcosaVLA.py  testDynamicPM.py  testEccGuardJedecMix.py  testEccGuardRegionPolicy.py  testEccGuardSmoke.py  testFourStateRegistry.py  testFourStateRegistryGated.py  testHaliBacking.py  testHaliMemH.py  testHaliPM.py  testManagerLogic.py  testfourStateRegistry.py  testfourStateRegistryGated.py  testsuite_default_carcosa.py  vla.c
src/sst/elements/carcosa/tests/refFiles/: test_carcosa_corruptmem_basic.out  test_carcosa_dynamic_pm.out  test_carcosa_hali_backing.out  test_carcosa_hali_memh.out  test_carcosa_manager_logic.out  test_carcosa_pingpong.out
src/sst/elements/quetz/: Makefile.am  QUETZ_OUTLINE.md  README.md  TESTING.md  configure.m4  quetz_command_buffer.h  quetz_config.cc  quetz_config.h  quetz_config_manager.cc  quetz_config_manager.h  quetz_core_backend.cc  quetz_core_backend.h  quetz_frontend.h  quetz_gpu_device.cc  quetz_gpu_device.h  quetz_ipc_types.h  quetz_launcher.cc  quetz_launcher.h  quetz_logging_pipeline_output.cc  quetz_mem_access.cc  quetz_mem_access.h  quetz_mem_issue.cc  quetz_mem_issue.h  quetz_memmap.cc  quetz_memmap.h  quetz_mmio_sync.h  quetz_pipeline.cc  quetz_pipeline.h  quetz_pipeline_api.h  quetz_pipeline_filter.cc  quetz_pipeline_input.cc  quetz_pipeline_output.cc  quetz_pipeline_transform.cc  quetz_platform_profiles.cc  quetz_qemu_frontend.cc  quetz_qemu_frontend.h  quetz_region_handler.h  quetz_region_handlers.cc  quetz_region_handlers.h  quetz_region_table.cc  (+12 more)
src/sst/elements/quetz/qemu_plugin/: decoder_aarch64.cpp  decoder_aarch64.h  decoder_generic.cpp  decoder_generic.h  decoder_riscv.cpp  decoder_riscv.h  insn_classifier.cpp  insn_classifier.h  instrument.cpp  instrument.h  mem_access_handler.cpp  mem_access_handler.h  plugin_main.cpp  plugin_state.cpp  plugin_state.h  qemu_sst_plugin.cpp  registry.h
src/sst/elements/quetz/tests/: .gitignore  quetz_test_helpers.py  testsuite_default_quetz.py  validate_against_libmem.py
src/sst/elements/quetz/tests/binaries/: build_microbench.sh  hello_aarch64  hello_multiisa.c  hello_x86_64  rvv_saxpy  rvv_saxpy.c
src/sst/elements/quetz/tests/sysmode/: basic_quetz_balar.py  basic_quetz_gpu.py  basic_quetz_mmio.py  basic_quetz_sysmode.py  preset_quetz_sysmode.py  run_mmio_test.sh  test_quetz_balar_smoke.py  test_quetz_balar_vectoradd.py
src/sst/elements/quetz/tests/unit/: run_unit_tests.sh  sst_stubs.h  test_command_buffer.cc  test_config_manager.cc  test_decoder_aarch64.cc  test_decoder_generic.cc  test_decoder_riscv.cc  test_ipc_layout.cc  test_mem_issue_split.cc  test_quetz_config.cc  test_region_table.cc  test_smoke.cc
src/sst/elements/quetz/tests/usermode/: basic_quetz.py  basic_quetz_gpu.py  basic_quetz_gpu_trace.py  custom_pipeline_output.py  test_aarch64_hello.py  test_config_bad.py  test_hello.py  test_hello_l1cache.py  test_merlin_2node.py  test_mips_hello.py  test_multicore.py  test_rvv_saxpy.py  test_sqrt_fp.py  test_stream.py  test_wide_split.py  test_x86_hello.py
(+79 files in other folders)
